@@ -17,6 +17,8 @@ Version 1.3.1+svn:
      --enable-tinygui (bug #8720 patch #697)
    * rewrote the halo render engine which solves a few minor glitches but 
      most importantly speeds up the drawing of the halos.
+   * units are scaled properly when zooming also with tiny gui (bug #8703 and bug #6570)
+   * haloes in tiny gui are now scaled (before unscaled, thus a factor 2 bigger as intended)
 * language and i18n:
    * updated translations: Bulgarian, Czech, Danish, Dutch, French, German,
      Hungarian, Italian, Norwegian, Portuguese (Brazil)
@@ -55,11 +57,12 @@ Version 1.3.1+svn:
  * user interface:
    * new sounds for user interface events
    * added the option to show warnings about deprecated WML usage
- * misceleanous bug fixes
+ * misceleanous changes and bug fixes
    * an friendly healer hill now stop poisoned unit to lose HP
    * a unit that dies while attacking will now correctly play it's own death
    * turn bell can sound if other soundFX are turned off
    * the first turn starts again with the proper time of day (bug 8637)
+   * removes the scaling handling in the halo, removing quite some code
 
 Version 1.3.1:
  * Campaignd
